fix jumpmenu

--- a/css/krisna-menu.css
+++ b/css/krisna-menu.css
@@ -34,7 +34,7 @@ nav#krisna-menu a {
     color: #fff;
     text-decoration: none;
     margin: .4em 1em;
-    font-weight: normal;
+    font-weight: 300;
 }
 
 @media (max-width: 640px) {
@@ -45,6 +45,7 @@ nav#krisna-menu a {
         left: 0px;
         z-index: 1;
         user-select: none;
+        padding: 3px;
     }
 
     #menuToggle input {
@@ -66,7 +67,7 @@ nav#krisna-menu a {
         height: 3px;
         margin-bottom: 2px;
         position: relative;
-        background: #111;
+        background: #fff;
         border-radius: 2px;
         z-index: 1;
         transform-origin: 2px 0px;
@@ -90,7 +91,7 @@ nav#krisna-menu a {
     #menuToggle input:checked ~ span {
         opacity: 1;
         transform: rotate(45deg) translate(0, 0);
-        background: #444;
+        background: #fff;
     }
 
     /*
@@ -123,7 +124,7 @@ nav#krisna-menu a {
         -webkit-font-smoothing: antialiased;
         /* to stop flickering of text in safari */
         transform-origin: 0% 0%;
-        transform: translate(-100%, 0);
+        transform: translate(-110%, 0);
         transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
     }
 
